@@ -40,6 +40,7 @@ RateUnitMode 1
 # 2 = same as 1 except rate in summary
 # 3 = rate column visible
 OutputStyle 3
+EstimateBarVisible 1
 
 # number of decimals to use in outputs
 DefaultDecimals 2
@@ -173,6 +174,10 @@ TransparentBg 0
 
 # image scale (percent)
 ImageScale 100
+
+# traffic estimate bar style
+# (0 = not shown, 1 = continuation of existing bar, 2 = separate bar)
+EstimateStyle 1
 
 # image colors
 CBackground     "FFFFFF"
